src/objects/Vertical_Hierarchy_Information__c.object
<CustomObject>
    <fields>
        <fullName>Partner_Profile__c</fullName>
        <label>Partner Profile</label>
        <referenceTo>Partner_Profile_PC__c</referenceTo>
        <relationshipLabel>Vertical Hierarchy Information</relationshipLabel>
        <relationshipName>Vertical_Hierarchy_Informations_del</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Vertical_Segment__c</fullName>
        <label>Vertical Segment</label>
        <picklist>
            <controllingField>Vertical__c</controllingField>
            <picklistValues>
                <fullName>Acute Care: Hospitals - Mental Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acute Care: Hospitals - Physical Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agriculture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ambulatory Care: Blood Banks and Donation Centers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ambulatory Care: Dialysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ambulatory Care: Emergency and Ambulatory Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ambulatory Care: Out Patient Surgery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ambulatory Care: Physician Offices and Clinics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ambulatory Care: Reference and Diagnostic Labs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ambulatory Care: Urgent Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amusement Parks, Museums, and Zoos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communications and Entertainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Federal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food and Beverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forestry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Higher Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial Machinery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Library</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lodging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Long Term Care: Assisted Living</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Long Term Care: Nursing Homes</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vertical__c</fullName>
        <label>Vertical</label>
        <picklist>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare (core)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospitality (core)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing (core)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail (core)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Providers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation and Logistics (core)</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Vertical Hierarchy Information</label>
    <nameField>
        <displayFormat>VH-{0000}</displayFormat>
        <label>Vertical Hierarchy Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vertical Hierarchy Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>